Make image smaller to prevent overflow

--- a/friendshipct.css
+++ b/friendshipct.css
@@ -2,3 +2,8 @@
  font-family: 'Waymar', Conv_Poly-Italic, sans-serif;
  color: #38598d;
 }
+
+#Header img {
+ width: 100%;
+ height: auto;
+}
